--- a/style.css
+++ b/style.css
@@ -18,11 +18,17 @@ button{
     border-color: blue;
     outline: none;
     cursor: pointer;
+    position: relative;
+}
+.header{
+    margin-top: 3em;
+    margin-left: 3em;
+    color: royalblue;
 }
 
 #addTodoListDiv{
     margin-left: 3em;
-    margin-top: 5em;
+    margin-top: 1.5em;
 }
 
 #addTodoListDiv button{
@@ -70,7 +76,7 @@ button{
     display: flex;
     justify-content: space-between;
 
-    cursor: pointer;
+    cursor:grab;
 }
 
 .card button{
@@ -93,6 +99,10 @@ button{
     color: yellow;
     border-radius: 4px;
     cursor: pointer;
+}
+
+.card.dragging{
+    opacity: 0.5;
 }
 
 
